--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
 }
 
@@ -49,4 +48,12 @@ input:read-only {
 }
 .new-file-form {
   padding-left: 20px;
+}
+.actions > button {
+  visibility: hidden;
+  margin-left: 10px;
+  padding: 2px 6px;
+}
+.folder-node:hover .actions > button {
+  visibility: visible;
 }
